# simplex

./: .flake8  .gitignore  Makefile  README.md  alert.ui  pyproject.toml  requirements.txt  simplex.py  view.py  view.ui
src/: main.py
src/algorithms/: simplex.py
src/ui/: alert.py  view.py
src/utils/: expressions.py  objects.py  table.py
